--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <title>Salamangka</title>
-  <link href="//cdn.jsdelivr.net/keyrune/latest/css/keyrune.css" rel="stylesheet" type="text/css" />
+  <link href="/styles/css/keyrune.min.css" rel="stylesheet" type="text/css" />
+  <link href="/styles/css/mana.min.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
